# mandelbrot.python

./: pyproject.toml
src/my_mandelbrot_py/: mandelbrot.py
